# DroneOPERA

./: .gitignore  .gitmodules  README.md
src/: .gitignore  CMakeLists.txt  main.cpp  main2.cpp  plot.py  setup.sh
src/drone/: Drone.cpp  Drone.h
src/energy/: energy.cpp  energy.h
src/includes/ns3/ns-allinone-3.40/ns-3.40/: .lock-ns3_linux_build
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/: .ninja_deps  .ninja_log  CTestTestfile.cmake  compile_commands.json  ns3.40-stdlib_pch_exec-default  ns3config.txt  ns3scratches
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/contrib/netsimulyzer/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/channel-models/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/energy/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/error-model/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/ipv6/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/matrix-topology/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/naming/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/realtime/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/routing/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/socket/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/stats/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/tcp/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/traffic-control/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/tutorial/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/udp/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/udp-client-server/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/examples/wireless/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/pkgconfig/: ns3-antenna.pc  ns3-aodv.pc  ns3-applications.pc  ns3-bridge.pc  ns3-buildings.pc  ns3-config-store.pc  ns3-core.pc  ns3-csma-layout.pc  ns3-csma.pc  ns3-dsdv.pc  ns3-dsr.pc  ns3-energy.pc  ns3-fd-net-device.pc  ns3-flow-monitor.pc  ns3-internet-apps.pc  ns3-internet.pc  ns3-lr-wpan.pc  ns3-lte.pc  ns3-mesh.pc  ns3-mobility.pc  ns3-mpi.pc  ns3-netanim.pc  ns3-netsimulyzer.pc  ns3-network.pc  ns3-nix-vector-routing.pc  ns3-olsr.pc  ns3-point-to-point-layout.pc  ns3-point-to-point.pc  ns3-propagation.pc  ns3-sixlowpan.pc  ns3-spectrum.pc  ns3-stats.pc  ns3-tap-bridge.pc  ns3-topology-read.pc  ns3-traffic-control.pc  ns3-uan.pc  ns3-virtual-net-device.pc  ns3-wifi.pc  ns3-wimax.pc
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/scratch/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/scratch/nested-subdir/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/src/: CTestTestfile.cmake
src/includes/ns3/ns-allinone-3.40/ns-3.40/cmake-cache/utils/: CTestTestfile.cmake
src/logics/: CustomUdpClient.cpp  CustomUdpClient.h  CustomUdpServer.cpp  CustomUdpServer.h
src/mobility/: custom-mobility-model.cpp  custom-mobility-model.h
src/model/: client.py  sleep.py
src/parser/: JsonParser.cpp  JsonParser.h
src/results/: results.csv
src/scenario/: scenario.json  scenario1.json
src/utils/: MatrixFunctions.cpp  MatrixFunctions.h
(+79 files in other folders)
